methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:18: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime2.MethodsReturning'
override def run () {
             ^